# byd-hyperscanning-analysis

./: .envrc.dist  .gitignore  README.md  main.py  pyproject.toml
notebooks/: explore_preprocessed_data.ipynb  isc_analysis.ipynb
scripts/: frame_analysis.fish
src/: composite-stimuli-features.py  preprocess-data.py  remove-eareeg-channels.py
src/analysis/: isc.py  plotting.py
src/data/: eeg.py
