[project]
name = "hypa"
version = "0.1.0"
description = "Anaylsis pipeline for hyperscanning"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "eeglabio>=0.1.3",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "mne>=1.11.0",
    "mne-icalabel>=0.8.1",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pandas-stubs>=3.0.0.260204",
    "pyxdf>=1.17.3",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
    "tqdm-stubs>=0.2.1",
]

[tool.uv]
package = true
